--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
+body {
     @apply touch-pan-y min-h-screen bg-main-900;
+}
+
+input,
+textarea {
+    font-size: initial;
 }
