--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
 
 /* 自訂義class */
 .banner-clip-path{
-    clip-path: polygon(0% 0%, 100% 0, 100% 65%, 51% 100%, 0 86%);
+   clip-path: polygon(0 0, 100% 0%, 100% 80%, 51% 100%, 0 81%);
 }
 
 .my-input{
