--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,3 +22,7 @@ body {
 .swiper-pagination{
     bottom: 5% !important;
 }
+
+.swiper-grid.swiper-grid-column > .swiper-wrapper{
+    @apply !flex-row
+}
