[fix] fix banner mobile show bug and add new slider effect

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
 
 /* Swiper */
 .swiper-base .swiper-wrapper{
-    @apply flex justify-center
+    @apply flex
 }
 .swiper-pagination{
     @apply !bottom-[5%]
